# financial-advisor-agent

./: .dockerignore  .gcloudignore  Dockerfile  bank_data.db  cloudbuild.yaml  main.py  pyproject.toml  setup_env.py
bank_agent/: .env.example  agent.py  models.py  prompt.py
bank_agent/auth/: __init__.py  jwt_handler.py
bank_agent/mcp/: __init__.py  bq_mcp_server.py  knowledge_mcp_server.py  mcp_client.py
bank_agent/memory/: __init__.py  memory_bank.py
bank_agent/observability/: __init__.py  callbacks.py  config.py  dashboard.html  metrics.py  otel_setup.py  tool_tracer.py
bank_agent/sub_agents/: __init__.py  advisory_agent.py  cx_agent.py  guardrails_agent.py  product_recommendation_agent.py  profile_agent.py  runner.py  transaction_agent.py
bank_agent/tools/: bigquery_tool.py  customersearch.py  ecommerce_tools.py  productsearch.py
bq_seed/: accounts.json  customers.json  products.json  transactions.json
datasets/: bank.yaml  ecommerce.yaml
deploy/: bq_deploy.py  bq_destroy.py  main.tf  obliterate.py  tf_deploy.py  tf_run.py
