[project]
name = "adkagents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "google-adk>=1.29.0",
    "google-cloud-aiplatform>=1.0.0",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-discoveryengine>=0.11.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "db-dtypes>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi",
    "uvicorn",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-gcp-logging>=1.12.0a0",
    "opentelemetry-exporter-gcp-monitoring>=1.12.0a0",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "pyyaml>=6.0",
]

[project.scripts]
setup-env = "setup_env:main"
tf = "deploy.tf_run:main"
tf-deploy = "deploy.tf_deploy:main"
bq-deploy = "deploy.bq_deploy:main"
bq-destroy = "deploy.bq_destroy:main"
obliterate = "deploy.obliterate:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["bank_agent", "deploy", "setup_env.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
